Kubernetes Client Java 15.0.0 and resolve Sonar issues (#2878)
* Kubernetes Client Java 15.0.0 and resolve Sonar issues